objects/OwnerGroup__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_force_Description__c</fullName>
        <label>Sales force Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Owner Group</label>
</CustomObject>